Kali fix: use venv for pandas; remove pip from postinstall; add axios/recharts; ensure nodemon

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-   "postinstall": "npm --prefix server install && npm --prefix client install"
+    "postinstall": "npm --prefix server install && npm --prefix client install",
     "dev": "concurrently \"npm --prefix server run dev\" \"npm --prefix client run dev\""
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
   }
 }
+
