--- a/server/package.json
+++ b/server/package.json
@@ -9,14 +9,17 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "@abandonware/noble": "^1.9.2-26",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb-memory-server": "^9.0.3",
-    "mongoose": "^8.6.0"
+    "mongoose": "^8.6.0",
+    "serialport": "^13.0.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "concurrently": "^9.2.1",
+    "nodemon": "^3.1.10"
   }
 }
-
